<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productListConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4D2D2"
    tools:context=".activity.ProductListActivity">

    <ImageView
        android:id="@+id/userProfileImageView2"
        android:layout_width="87dp"
        android:layout_height="90dp"
        android:contentDescription="@string/user_profile_image_view_and_it_just_for_testing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
